--- a/index.html
+++ b/index.html
@@ -182,6 +182,6 @@
     <div id="smallcontainer" class="grabsome">GRAB SOME HEALTHY BREAKFAST!!!</div>
     <img id="lastimage" class="curtainlady">
 
-    <script src="./indexcss.js"></script>
+    <script src="./indexjs.js"></script>
 </body>
 </html>
